Fixed notch layout issues and iOS status bar.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
 	font-size: 100%;
+	-webkit-tap-highlight-color: transparent;
 }
 
 * {
@@ -83,6 +84,7 @@ body {
 }
 
 h1 {
+	-webkit-tap-highlight-color: rgba(247, 225, 239, 0.349);
 	text-align: center;
 	font-size: 2.5em;
 	font-family: 'Montserrat', sans-serif;
